--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         },
         "require": {
                 "illuminate/database": "^5.6",
-                "twig/twig": "^2.5"
+                "twig/twig": "^2.5",
+                "wixel/gump": "^1.5"
         }
 }
