--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
                 "illuminate/database": "^5.8",
                 "twig/twig": "^2.5",
                 "wixel/gump": "^1.5",
-                "nesbot/carbon": "^2.0.1"
+                "nesbot/carbon": "^2.0.1",
+                "setasign/fpdf": "1.8.1"
         }
 }
