remove unwanted report files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ error.log
 data/backups/*.sql
 data/uploads/propics/staff/*.jpg
 data/uploads/propics/student/*.jpg
+data/reports/attendance/*.pdf
+data/reports/result/*.pdf
+data/reports/student/*.pdf
