--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
                 "twig/twig": "^2.5",
                 "wixel/gump": "^1.5",
                 "nesbot/carbon": "^2.0.1",
-                "ifsnop/mysqldump-php": "^2.8"
+                "ifsnop/mysqldump-php": "^2.8",
+                "endroid/qr-code": "^3.7"
         }
 }
